[gd_scene load_steps=5 format=3 uid="uid://kao5el10hvnx"]

[ext_resource type="Script" path="res://map/cover_spot.gd" id="1_qgxii"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y2crc"]
size = Vector3(1, 0.211638, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_him8x"]
shading_mode = 0
albedo_color = Color(0.133333, 1, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_6hgdb"]
material = SubResource("StandardMaterial3D_him8x")
size = Vector2(1, 1)

[node name="cspot" type="StaticBody3D" groups=["cover"]]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_qgxii")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_y2crc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_6hgdb")

[node name="DefaultCoverRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_mask = 6

[node name="HighCoverRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
exclude_parent = false
target_position = Vector3(0, 0, -1)
collision_mask = 6

[node name="ShootSpots" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, 0)

[node name="ShootPosition1" type="RayCast3D" parent="ShootSpots"]
collision_mask = 6

[node name="ShootPosition2" type="RayCast3D" parent="ShootSpots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
collision_mask = 6

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
